0.0.2 - Initial Public release.
0.0.3 - Bug fix release
        - If 'Do Not record these log entries' was blank, then all system.log messages were ignored.
        - Fix typo in documentation.
0.0.4 - Bug fix release
        - Endless loop if error in config files.
        - Endless loop of module dependency fails
0.0.5 - change _writer method to public
0.1.0 - Add ability to ignore admin
      - Add ability to ignore modules
      - Add ability to name transactions
      - Add ability to add module name to named transactions
      - Move config menu option to proxiblue tab
0.1.1 - Bug Fix: #14 - Notice: undefined index 'class'
0.1.3 - Add appname to agent commands
0.1.4 - Further adjustments to set correct appname when using the newrelic php agent commands
      - Add license key field in admin, and adjust to populate correctly
0.1.5 - Adjust Exception push to not set appName if error is pushed direct from exceptions.
0.1.6 - Fix incorrect php closing tag - https://github.com/ProxiBlue/NewRelic/pull/10
0.1.7 - Change way that charts are embeded into dashboard
0.1.8 - Fix double >> in config.xml for closing tag
0.1.9 - Fixed ajax requests for cases when store is installed into a subfolder
0.1.10 - Deal better with store id not found when logging. Highlighted when commercebug module is also in use.
0.1.11 - Modman and composer files missed
0.1.12 - Remove activation of wishlist in setup. Not sure why it was there
0.1.13 - Fix issue where admin pages are still sent to newrelic, even when admin is set to not log admin pages
0.1.14 - Move namespace to proxiblue_newrelic
0.1.15 - Add ability to trace methods. some error trapping in account details fetching

Reproducing error for 0.0.4 bug release.
In any app/etc/module/ config xml file place a depends to a non-existing module.
